--- a/styles.css
+++ b/styles.css
@@ -3,28 +3,50 @@
 {
     margin:0;
     padding: 0;
+    /* background-color:#363543 */
 }
 .nav
 {
     display:flex;
-
+    justify-content:space-around;
+    margin-top: 1%;
 }
 .nav1
 {
-
+    display:flex
+}
+.nav1a {
+    margin-left: -120%;
+}
+.nav1a h2
+{
+    color:#F1BA1B;
 }
 .nav2 ul
 {
     list-style-type: none;
     display: flex;
-    padding:20px;
+    
 }
 .nav2 ul li
 {
-    padding:10px
+    font-size: 120%;
+    margin-left: 15%;
+    margin-top: 1%;
+    position: relative;
+    left: -133%;  
 }
 .nav3
 {
-    font-size: 30px;
-    margin:20px
+    justify-content: space-between;
+    display: flex;
+    margin-top: 0.3%;
+    width: 6%;
+    font-size: 146%;
+    position: relative;
+    left: 3%;   
+}
+.nav3 i
+{
+    margin-left:32%;
 }
