--- a/styles.css
+++ b/styles.css
@@ -4,19 +4,25 @@
     margin:0;
     padding: 0;
     /* background-color:#363543 */
+    font-family: 'Roboto', sans-serif;
+}
+.container11
+{
+    background-color: #606176;
+   /* margin-top: 1%; */
 }
 .nav
 {
     display:flex;
     justify-content:space-around;
-    margin-top: 1%;
+    /* margin-top: 1%; */
 }
 .nav1
 {
     display:flex
 }
 .nav1a {
-    margin-left: -120%;
+    margin-left: -100%;
 }
 .nav1a h2
 {
@@ -49,4 +55,96 @@
 .nav3 i
 {
     margin-left:32%;
+}
+.container1
+{
+    display: flex;
+    /* background-color: #3b3b56a3; */
+    margin-top: 5%;
+    height:300px;
+}
+.container1a
+{
+    position:relative;
+    left:6%
+}
+.container1a h1
+{
+    font-size: 300%;
+}
+.container1a h2 {
+    font-size: 183%;
+}
+.container1a p
+{
+    font-size: 115%;
+}
+.container1b
+{
+    width: 400px;
+    height: 400px;
+    border-radius: 50%;
+    background-color: rgba(76, 70, 70, 0.177);
+    position: relative;
+    bottom: 24%;
+    left: 1%;
+}
+.container1c h3
+{
+    margin-bottom:5%;
+    margin-top: 4%;
+    font-size:larger;
+}
+.container1c p
+{
+    margin: 5% 0%;
+    font-weight: bold;
+}
+.container1c i
+{
+    margin-left: 5%;
+}
+hr
+{
+    height: 2%;
+    width:30%;
+    margin:5% 0%;
+}
+
+/* Nav bar and Completed till services */
+
+.container2 
+{
+    background-color: #494958;
+    display: flex;
+    justify-content: space-evenly;
+    width: 75%;
+    height:76px;
+    margin-left: 13%;
+    margin-top: -3%;
+    font-size: 35px;
+}
+.container2a
+{
+    background-color: #606176;
+    margin-top: 2%;
+    margin-bottom: 1%;
+}
+.container2b
+{
+    background-color: #606176;
+    margin-top: 2%;
+    margin-bottom: 1%;
+}
+.container2c
+{
+    background-color: #606176;
+    margin-top: 2%;
+    margin-bottom: 1%;
+}
+.container2d
+{
+    background-color: #606176;
+    margin-top: 2%;
+    margin-bottom: 1%;
 }
