--- a/styles.css
+++ b/styles.css
@@ -6,20 +6,22 @@
     /* background-color:#363543 */
     font-family: 'Roboto', sans-serif;
 }
-.container11
+.section1
 {
-    background-color: #606176;
+    background-color: #454455;
    /* margin-top: 1%; */
 }
 .nav
 {
+    color: #f5f5f5;
     display:flex;
     justify-content:space-around;
     /* margin-top: 1%; */
 }
 .nav1
 {
-    display:flex
+    display:flex;
+    margin-top: 2%;
 }
 .nav1a {
     margin-left: -100%;
@@ -28,11 +30,14 @@
 {
     color:#F1BA1B;
 }
+.nav2
+{
+    margin-top: 2%;
+}
 .nav2 ul
 {
     list-style-type: none;
     display: flex;
-    
 }
 .nav2 ul li
 {
@@ -50,18 +55,25 @@
     width: 6%;
     font-size: 146%;
     position: relative;
-    left: 3%;   
+    left: 3%;
+    margin-top: 2%;
 }
 .nav3 i
 {
     margin-left:32%;
 }
+
+/* .section2
+{
+    background-color:#b8bbdb;
+} */
 .container1
 {
     display: flex;
+    color:#f5f5f5;
     /* background-color: #3b3b56a3; */
-    margin-top: 5%;
-    height:300px;
+    margin-top: 6%;
+    height:390px;
 }
 .container1a
 {
@@ -84,10 +96,21 @@
     width: 400px;
     height: 400px;
     border-radius: 50%;
-    background-color: rgba(76, 70, 70, 0.177);
+    background-color: #403F49;
     position: relative;
-    bottom: 24%;
-    left: 1%;
+    top: -24%;
+}
+.container1b img
+{
+    width: 90%;
+    height: 90%;
+    margin-top: -5%;
+    margin-left: 4%;
+}
+}
+.container1c
+{
+    margin-top: -2%;
 }
 .container1c h3
 {
@@ -99,52 +122,283 @@
 {
     margin: 5% 0%;
     font-weight: bold;
+    color: #F1BA1B;
 }
 .container1c i
 {
     margin-left: 5%;
+    color: #F1BA1B;
 }
-hr
+.container1a hr
 {
-    height: 2%;
-    width:30%;
+    height: 0.5%;
+    width:40%;
     margin:5% 0%;
+    background-color: #F1BA1B;
 }
 
-/* Nav bar and Completed till services */
+/* Nav bar and Completed till services  */
+.section2
+{
+    background-color: #32323E;
+    color: #f5f5f5;
+    height: 900px;
+}
 
 .container2 
 {
-    background-color: #494958;
+    background-color: #3D3C4E;
     display: flex;
     justify-content: space-evenly;
-    width: 75%;
-    height:76px;
-    margin-left: 13%;
+    width: 80%;
+    height:90px;
+    margin-left: 11%;
     margin-top: -3%;
     font-size: 35px;
+    position: absolute;
 }
-.container2a
+.container2a,.container2b,.container2c,.container2d
 {
-    background-color: #606176;
+    background-color: #272833;
     margin-top: 2%;
-    margin-bottom: 1%;
+    margin-bottom: 2%;
+    width: 20%;
+    display: flex;
+    justify-content: center;
 }
-.container2b
+/* .container2b
 {
-    background-color: #606176;
+    background-color: #272833;
     margin-top: 2%;
-    margin-bottom: 1%;
+    margin-bottom: 2%;
+    width: 20%;
+    display: flex;
+    justify-content: center;
 }
 .container2c
 {
-    background-color: #606176;
+    background-color: #272833;
     margin-top: 2%;
-    margin-bottom: 1%;
+    margin-bottom: 2%;
+    width: 20%;
+    display: flex;
+    justify-content: center;
 }
 .container2d
 {
-    background-color: #606176;
+    background-color: #272833;
     margin-top: 2%;
-    margin-bottom: 1%;
+    margin-bottom: 2%;
+    width: 20%;
+    display: flex;
+    justify-content: center;
+} */
+
+/* Now the work of 3rd contianer has been started  */
+
+.container3
+{
+    /* background-color: #b8bbdb; */
+    display: flex;
+    /* justify-content: space-around; */
+    width: 100%;
+
 }
+.container3a{
+    margin-left: 6%;
+    margin-top: 9%;
+    width: 50%;
+
+}
+.container3a1{}
+.container3a2{
+    margin-top: 2%;
+}
+.container3a3{}
+.container3aa{
+    display: flex;
+    margin-top: 5%;
+}
+.container3a3a num1{
+    color: #F1BA1B;
+}
+p.num1
+{
+    font-size: xx-large;
+    color:#F1BA1B
+}
+.container3a3b{
+    margin-left: 5%;
+}
+.container3a3b num2{
+    color: #F1BA1B;
+}
+p.num2
+{
+    font-size: xx-large;
+}
+.num2{
+    color:#F1BA1B
+}
+.container3bb{
+    display: flex;
+    margin-top: 5%;
+}
+.container3a3c{
+}
+.num3{
+    color:#F1BA1B
+}
+p.num3
+{
+    font-size: xx-large;
+}
+.container3a3d{
+    margin-left: 5%;
+}
+.num4{
+    color:#F1BA1B
+}
+p.num4
+{
+    font-size: xx-large;
+}
+.container3b{
+    width: 50%;
+    margin-top: 5%;
+    margin-bottom:2%
+}
+.container3b1{
+    display: flex;
+    /* justify-content: space-between;  */
+    align-items: center;
+}
+.container3b1 h2 {
+    margin-top: -2%;
+    margin-left: 3%;
+}
+.container3b1 p {
+    margin-top: 6%;
+    margin-left: -19%;
+}
+.container3b1 i {
+    margin-left: 20%;
+    margin-top: 2%;
+    color: #F1BA1B;
+}
+.container3b1 hr {
+    width: 60%;
+    margin-top: 20%;
+    margin-left: -58%;
+}
+.container3b2{
+    display: flex;
+    align-items: center;
+}
+.container3b2 h2 {
+    margin-top: -2%;
+    margin-left: 3%;
+}
+.container3b2 p {
+    margin-top: 6%;
+    margin-left: -33%;
+}
+.container3b2 i {
+    margin-left: 22%;
+    margin-top: 5%;
+    color: #F1BA1B;
+}
+.container3b2 hr {
+    width: 60%;
+    margin-top: 20%;
+    margin-left: -58%;
+}
+.container3b3{
+    display: flex;
+    align-items: center;
+}
+.container3b3 h2 {
+    margin-top: -2%;
+    margin-left: 3%;
+}
+.container3b3 p {
+    margin-top: 6%;
+    margin-left: -36%;
+}
+.container3b3 i {
+    margin-left: 24%;
+    margin-top: 5%;
+    color: #F1BA1B;
+}
+.container3b3 hr {
+    width: 62%;
+    margin-top: 20%;
+    margin-left: -60%;
+}
+
+/* Now starting ton work on the last most section */
+.container4
+{
+    display: flex;
+    justify-content: space-evenly;
+    margin-top: 5%;
+    /* margin-bottom: 5%; */
+}
+.container4a,.container4b,.container4c
+{
+    width: 25.33%;
+    background-color: #444455;
+    line-height: 1.6;
+    /* margin-bottom: -10%; */
+    /* margin-left:20% ; */
+}
+.container4a i,.container4b i,.container4c i {
+    margin-left: 10%;
+    margin-top: 6%;
+    color: #F1BA1B;
+    height:30px;
+}
+.container4a h2,.container4b h2,.container4c h2 {
+    margin-left: 10%;
+}
+.container4a p,.container4b p,.container4c p {
+    margin-left: 10%;
+}
+.container4a span,.container4b span,.container4c span{
+    margin-left: 10%;
+    color:#F1BA1B;
+}
+/* 
+.container4b
+{
+    width: 25.33%;
+    background-color:#444455;
+    line-height: 1.6;
+}
+.container4b i {
+    margin-left: 10%;
+    margin-top: 6%;
+}
+.container4b h2 {
+    margin-left: 10%;
+}
+.container4b p {
+    margin-left: 10%;
+}
+.container4c
+{
+    width: 25.33%;
+    background-color:#444455;
+    line-height: 1.6;
+    margin-right: 20%; 
+}
+.container4c i {
+    margin-left: 10%;
+    margin-top: 6%;
+}
+.container4c h2 {
+    margin-left: 10%;
+}
+.container4c p {
+    margin-left: 10%;
+}*/
